--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <section class="header">
+      <div class="circle" width="50%"></div>
         <div class="wrapper">
              <div class="nav">
                 <div class="cont1">
@@ -21,6 +22,7 @@
                     <li><a>Happy Hour</a></li>
                  </ul>
                 </div>
+                <div class="circle"></div>
                 <div class="logo">
                    <img src="Assets/logostreetfood.png">
                 </div>
@@ -54,7 +56,7 @@
      <section>
     <div class="container">
         </div>
-        <img src="Assets/undraw_eating_together_tjhx.png">
+        <img src="Assets/undraw_eating_together_tjhx.png " height="">
         </div>
         <h1>Eat together</h1>
         <p>There is something profoundly satisfying <br>
@@ -165,3 +167,6 @@
 </footer>
 </body>
 </html>
+
+
+
