--- a/index.html
+++ b/index.html
@@ -53,17 +53,21 @@
  </section>
 
 
-     <section>
+  <section id="banner">
     <div class="container">
+        <div class="row">
+          <div class="promoimg">
+        <img src="Assets/undraw_eating_together_tjhx.png " height="300px" width="500px">
         </div>
-        <img src="Assets/undraw_eating_together_tjhx.png " height="">
-        </div>
+        <div class="promo">
         <h1>Eat together</h1>
         <p>There is something profoundly satisfying <br>
            about sharing a meal. Eating together,<br>
            breaking bread together, is one of the<br>
            oldest and most fundamentaly unifying of<br>
-            human experiences.</p>
+           human experiences.</p>
+          </div>
+        </div>
    </div>
 </section>
 
