--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="row">
           <div class="promoimg">
-        <img src="Assets/undraw_eating_together_tjhx.png " height="300px" width="500px">
+        <img src="Assets/undraw_eating_together_tjhx.png " height="350px" width="500px">
         </div>
         <div class="promo">
         <h1>Eat together</h1>
@@ -72,7 +72,7 @@
 </section>
 
 <section style="background-color: #C4C4C4;">
-    <h1 class="headings">Explore <Span>Menu</Span></h1>
+    <h1 class="headings">Explore <Span class="span1">Menu</Span></h1>
     <div class="row">
         <div class="column">
           <div class="content">
