--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
         <div class="team">
           
             <div class="team_member">
+                <div id="special">
               <div class="burgerimg2"><img src="Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" class="burg"></div>
               <div> <img src="Assets/Drink.png"></div>
+            </div>
+
               <div>
                   
                <div class="row"><h1>Special Combo Pack</h1></div>
