add the new commit

--- a/index.html
+++ b/index.html
@@ -176,42 +176,40 @@
     </div>
     </div>
 </section>
+
+
 <!-----footer-->
 <section class="sec_6">
-<footer>
-    <div>
+    <footer>
+       <div class="footer-container">
+           <div class="footer-left">
+            <div class="footer-leftletf">
+            <p style="font-size: 14px;width: 100%;">Sunday - Thurday<br><span style="font-size: 12px;">4-PPM</span></p>
+            <p style="font-size: 14px; width: 100%;">Friday - Saturday<br><span style="font-size: 12px;">4-10PM</span></p>
+            </div>
+            <div class="footer-leftright">
+                <p style="font-size: 15px;font-weight: bold;padding-bottom: 5px;">(424) 266-1121</p>
+                <p style="font-size: 12px;">801 Chestnut Street<br>
+                    Chattanooga TN 37402</p>
+                </div>
+           </div>
+           <div class="footer-right">
+            <div class="footer-rightleft">
+            <h4 style="padding-bottom: 5px;">FOLLOW</h4>
+            <p style="font-size: 11px;">GET THE LATEST NEWS.SIGNUP<br> FOR OUR NEWSLETTERS</p>
 
-<div class="row">
-    <div class="column" style="border-right: dashed #6CB840 1px;">
-        <ul>
-            <li>Sunday - Thursday<br>4-PPM</li>
-            <li>Friday - Saturday<br>4-10PM</li>
-        </ul>
-  </div>
-  <div class="column">
-    <ul>
-        <li>(424) 266-1121</li>
-        <li>801 Chestnut Street<br>Chattanooga TN 37402</li>
-    </ul>
-  </div>
-  <div class="column"></div>
-  <div class="column">
-    <ul>
-        <h1>FOLLOW US</h1>
-        <li>GET THE LATEST NEWS SIGN UP<br>FOR OUR NEWS LETTER</li>
-        <li>@Website Design</li>
-    </ul>
-  </div>
-  <div class="column">
-    <ul>
-        <li><img src="Assets/instagram.png"></li>
-        <li><button>Send</button></li>
-    </ul>
-  </div>
-</div>
-    </div>
-</footer>
-</section>
+            <P style="padding-top: 5px;">@Website Design</P>
+            </div>
+            <div class="footer-rightright">
+                <img src="Assets/instagram.png">
+                <button>Send</button>
+
+            </div>
+           </div>
+       </div>
+    </footer>
+    </section>
+
 </body>
 </html>
 
