--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!---contact us-->
 <section class="sec_5">
     <div class="wrappersec_5">
-    <h1>Contact <span>Us</span></h1>
+    <h1 style="padding-bottom: 20px;">Contact <span style="color: #6CB840;">Us</span></h1>
 
     <p>There is something profoundly satisfying <br>
         about sharing a meal. Eating together,<br>
